# Birdwatching-app

./: .env.template  .gitignore  .gitleaks.toml  README.md  mcp_server.py  pyproject.toml  requirements.txt  sonar-project.properties  wsgi.py
Birdwatching/: __init__.py  config.py  create_db_tables.py  schema.sql
Birdwatching/blueprints/: admin.py  aichatbot.py  auth.py  main.py  mcp_tools.py  posts.py  users.py
Birdwatching/templates/: base.html  index.html
Birdwatching/templates/admin/: admin.html
Birdwatching/templates/aichatbot/: aichatbot.html
Birdwatching/templates/auth/: login.html  register.html
Birdwatching/templates/posts/: create.html  edit.html
Birdwatching/templates/users/: edit.html  home.html  report.html
Birdwatching/utils/: databases.py  decorators.py  logger.py  mcp_client.py  middlewares.py
tests/: conftest.py  test_auth.py  test_posts.py  test_users.py
