[project]
name = "mcp-client-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.42.2",
    "fastapi>=0.115.12",
    "flask>=3.1.2",
    "mcp>=1.6.0",
    "openai>=2.8.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.44",
]
